--- a/samples/SocketsSample/wwwroot/polling.html
+++ b/samples/SocketsSample/wwwroot/polling.html
@@ -60,9 +60,20 @@
                 xhr.onreadystatechange = function () {
                     if (xhr.readyState == 4 && xhr.status == 200) {
                         // Do something useful here
+                        console.log("test");
                     }
                 }
-                xhr.send(data);
+
+                //var xh2 = new XMLHttpRequest();
+                //xh2.open('GET', `http://${location.host}/asasas`);
+                //xh2.onreadystatechange = function () {
+                    //if (this.readyState === 4) {
+                        //var resp = xh2.responseText;
+                        //console.log(resp);
+                        xhr.send(/*resp.toString() + ": " +*/ data);
+                    //}
+                //};
+                //xh2.send(null);
             };
 
             xhr('GET', `${sock.url}/getid`).then(connectionId => {
