Clean up code and fixed samples

--- a/samples/SocketsSample/wwwroot/hubs.html
+++ b/samples/SocketsSample/wwwroot/hubs.html
@@ -42,11 +42,11 @@
 
                     delete calls[response.Id];
 
-                    if (response.error) {
-                        cb.error(response.error);
+                    if (response.Error) {
+                        cb.error(response.Error);
                     }
                     else {
-                        cb.success(response.result);
+                        cb.success(response.Result);
                     }
                 }
                 else {
